fix : use guava Immutable Set